--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web development portfolio</title>
+    <title>Document</title>
 </head>
 <body>
-    <head>
-
-    </head>  
-    <main>
-
-    </main> 
-    <footer>
-        
-    </footer> 
+    
 </body>
 </html>
